book/tests/snapshots/snapshot__run_display_reference_prql@f-strings-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/f-strings-0.prql
---
prql dialect: generic

from employees
select full_name = f"{first_name} {last_name}"

