book/tests/snapshots/snapshot__run_display_reference_prql@filter-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/filter-0.prql
---
prql dialect:generic

from `employees`
filter `age` > 25


