book/tests/snapshots/snapshot__run_display_reference_prql@from-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/from-0.prql
---
prql dialect:generic

from `employees`


