book/tests/snapshots/snapshot__run_display_reference_prql@from-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/from-1.prql
---
prql dialect:generic

from e = employees
select `e.first_name`


