book/tests/snapshots/snapshot__run_display_reference_prql@functional-lang-0.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/internals/functional-lang-0.prql
---
from employees
filter age > 50
sort name



