book/tests/snapshots/snapshot__run_display_reference_prql@functional-lang-2.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/internals/functional-lang-2.prql
---
filter age > 50 (
  from employees
)
sort name



