book/tests/snapshots/snapshot__run_display_reference_prql@functions-0.prql-2.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/semantics/functions-0.prql
---
prql dialect:generic

from employees
filter age > 50
sort name


